load("//bazel:skia_rules.bzl", "exports_files_legacy")

package(
    default_applicable_licenses = ["//:license"],
)

licenses(["notice"])

exports_files_legacy()

py_binary(
    name = "compile_sksl_tests",
    srcs = [
        "compile_sksl_tests.py",
    ],
    visibility = ["//tools/skslc:__pkg__"],
)

py_binary(
    name = "minify_sksl",
    srcs = [
        "minify_sksl.py",
    ],
    visibility = ["//tools/sksl-minify:__pkg__"],
)

py_binary(
    name = "minify_sksl_tests",
    srcs = [
        "minify_sksl_tests.py",
    ],
    visibility = ["//tools/sksl-minify:__pkg__"],
)
